src/pages/content/toolbar/Toolbar.css
.toolbar-container {
  --color-main: #07889B;
  --color-main-dark: #077787;
  --color-accent: #FEE781;
  --color-accent-dark: #FFCD00;

  padding-left: 10px;
  display: flex;
  flex-direction: row;

  height: var(--toolbar-height);
  overflow: hidden;

  background-color: var(--color-main);
  box-shadow: 0 0.16em 0 var(--color-accent-dark);
}

.toolbar-title {
  display: flex;
  flex-direction: column;

  width: 12em;
  min-width: 12em;
}

.toolbar-tray {
  display: flex;
  flex-direction: row;

  width: calc(100% - 12em);/* full width - width of title */
}

#machine-name {
  background: none;
  padding: 0;
  border: none;
  color: lightgray;
  border-bottom: 1px solid black;
  width: 100%;
  margin: 0 15px 0 0;
  font-size: 2em;

  transition: color 0.3s ease;
}
#machine-name:focus {
  outline: none;
  color: #FFFFFF;
}

#machine-type {
  color: var(--color-accent);
  font-size: 1em;
  margin-top: 2px;
  font-family: sans-serif;
  cursor: pointer;

  transition: color 0.3s ease;
}
#machine-type:hover {
  color: var(--color-accent-dark);
}

.toolbar-button {
  background: none;/*Disable normal button style*/
  border: none;/*Disable normal button style*/
  outline: none;/*Disable normal button style*/
  padding: 0;/*Disable normal button style*/
  fill: white;
  justify-content: flex-end;

  margin-bottom: 5px;
  width: 6em;
  height: 100%;

  transition: fill 0.3s ease;
}
.toolbar-button:hover {
  fill: var(--color-accent);
}
.toolbar-button:disabled {
  fill: var(--color-main-dark);
}

.navicons {
  width: 100%;
  height: 100%;

  min-width: 30px;
}

#toolbar-help {
  margin-left: auto;
  margin-right: 10px;
  fill: white;
  width: 3em;
}
#toolbar-help:hover {
  fill: var(--color-accent);
}

